kubernetes/20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overengineer-backend
spec:
  selector:
    matchLabels:
      app: overengineer-backend
      app.gitlab.com/app: '$CI_PROJECT_PATH_SLUG'
      app.gitlab.com/env: '$CI_ENVIRONMENT_SLUG'
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: overengineer-backend
        app.gitlab.com/app: '$CI_PROJECT_PATH_SLUG'
        app.gitlab.com/env: '$CI_ENVIRONMENT_SLUG'
        tier: backend
    spec:
      imagePullSecrets:
      - name: gitlab-registry
      containers:
      - name: overengineer-backend
        image: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
        imagePullPolicy: "Always"
