kubernetes/30-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: overengineer-backend
spec:
  selector:
    app: overengineer-backend
  ports:
  - protocol: TCP
    port: 8080
