kubernetes/40-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: overengineer-backend
  labels:
spec:
  backend:
    serviceName: overengineer-backend
    servicePort: 8080
